Selection to 3D cursor operation cannot be redone #96156

Closed
opened 2022-03-03 20:41:59 +01:00 by Pjavel · 8 comments

System Information
Operating system: Windows 10

Blender Version
Broken: 3.0.1

Short description of error
When redoing Selection to 3D cursor operation, nothing happens, but it can be undone.

Exact steps for others to reproduce the error
Position the 3D cursor somewhere.
Then move some object to it's position using Selection to 3D cursor.
Undo the operation and then redo it and nothing happens.

**System Information** Operating system: Windows 10 **Blender Version** Broken: 3.0.1 **Short description of error** When redoing `Selection to 3D cursor` operation, nothing happens, but it can be undone. **Exact steps for others to reproduce the error** Position the 3D cursor somewhere. Then move some object to it's position using `Selection to 3D cursor`. Undo the operation and then redo it and nothing happens.
Author

Added subscriber: @Zexyp

Added subscriber: @Zexyp

#95935 was marked as duplicate of this issue

#95935 was marked as duplicate of this issue

Added subscriber: @iss

Added subscriber: @iss

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

Can confirm, seems to be oversight in 2bcf93bbbe operator returns OPERATOR_CANCELLED when it should return OPERATOR_FINISHED

Can confirm, seems to be oversight in 2bcf93bbbeb operator returns `OPERATOR_CANCELLED` when it should return `OPERATOR_FINISHED`

This issue was referenced by 4681987d92

This issue was referenced by 4681987d92c7de644fd3abddb726fa2300b59486

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Richard Antalik self-assigned this 2022-03-07 07:49:36 +01:00
Member
Added subscribers: @RobertS, @lichtwerk, @PratikPB2123, @OmarEmaraDev
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96156
No description provided.